<resources>
    <string name="app_name">MoMo Partner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="settings">Settings</string>
    <string name="request_to_pay">Request To Pay</string>
    <string name="transfer">Transfer</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="back_to_login">Back to Login</string>
    <string name="password">Password</string>
    <string name="username_login">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="done">Done</string>
    <string name="full_name">Full Name</string>
    <string name="select_payee">Select Payee</string>
    <string name="select_payer">Select Payer</string>
</resources>