<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.appuser.RegisterActivity"
    android:id="@+id/activity_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="80dp"
        android:orientation="vertical"
        android:paddingBottom="60dp">

        <EditText
            android:id="@+id/et_firstname_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/first_name"
            android:text="" />

        <EditText
            android:id="@+id/et_lastname_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/last_name"
            android:text="" />

        <EditText
            android:id="@+id/et_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:text="" />

        <EditText
            android:id="@+id/et_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:text="" />

        <EditText
            android:id="@+id/et_confirm_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:text="" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login_reg"
        style="@style/Style_Button"
        android:layout_alignParentTop="true"
        android:text="@string/back_to_login" />

    <Button
        android:id="@+id/btn_reg"
        style="@style/Style_Button"
        android:layout_alignParentBottom="true"
        android:text="@string/register" />

</RelativeLayout>